k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: patient-platform
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  rules:
    - host: patient.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8084
          - path: /api/patients
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8084
          - path: /api/billing
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8084
          - path: /audit-logs
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8084
